k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clinic-system-vue-deploy
  namespace: clinic-system
  labels:
    app: clinic-system-vue
spec:
  selector:
    matchLabels:
      app: clinic-system-vue
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: clinic-system-vue
    spec:
      containers:
        - name: clinic-system-vue
          image: clinic-system-vue:0.0.1
          resources:
            requests:
              cpu: '1'
              memory: 256Mi
            limits:
              cpu: '1'
              memory: 512Mi
          imagePullPolicy: Never
          ports:
            - containerPort: 80
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: clinic-system-vue
  namespace: clinic-system
  labels:
    name: clinic-system-vue-deploy
spec:
  selector:
    app: clinic-system-vue
  type: ClusterIP
  ports:
    - port: 5005
      protocol: TCP
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
      name: clinic-system-vue-ingress
  name: clinic-system-vue-ingress
  namespace: clinic-system
spec:
  ingressClassName: nginx
  rules:
    - host: "vue.clinic.system.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: clinic-system-vue
                port:
                  number: 5005
